[package]
name = "ferris_todo_api"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version="0.5.1", features=["json"] }
rocket_db_pools = "0.2.0"
tokio = { version="1", features=["full"] }
serde = { version="1", features=["derive"] }
serde_json = "1"
dotenv = "0.15.0"
bson = "2.13.0"
mongodb = { version="3.1.1", features=["sync"]}
